tests/machine/x/st/map_nested_assign.st
| data |
data := Dictionary newFrom:{'outer'->Dictionary newFrom:{'inner'->1}}.
data at: 'outer' at: 'inner' put: 2.
Transcript show: (data at: 'outer' at: 'inner') printString; cr.
